# ppt-extracter

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
ppt_extracter/: __main__.py
tests/: test_ppt_extracter.py
